package com.company.behavioral.chain_of_responsibility;

public class Currency {
    private final int amount;


    public Currency(int amount) {
        this.amount = amount;
    }

    public int getAmount() {
        return amount;
    }
}
